main/default/objects/pharos__Rule__c/pharos__Rule__c.object-meta.xml
<CustomObject>
    <label>Rule</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>