main/default/objects/pharos__Rule__c/fields/pharos__Active__c.field-meta.xml
<CustomField>
    <fullName>pharos__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>