main/default/objects/pharos__Rule__c/fields/pharos__AggregateInterval__c.field-meta.xml
<CustomField>
    <fullName>pharos__AggregateInterval__c</fullName>
    <label>Aggregate Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>