main/default/objects/pharos__Rule__c/fields/pharos__ComparisonOperator__c.field-meta.xml
<CustomField>
    <fullName>pharos__ComparisonOperator__c</fullName>
    <label>Comparison Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos__ComparisonOperator</valueSetName>
    </valueSet>
</CustomField>