main/default/objects/pharos__Rule__c/fields/pharos__Description__c.field-meta.xml
<CustomField>
    <fullName>pharos__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>