main/default/objects/pharos__Rule__c/fields/pharos__EventTimeInterval__c.field-meta.xml
<CustomField>
    <fullName>pharos__EventTimeInterval__c</fullName>
    <label>Event Time Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>