main/default/objects/pharos__Rule__c/fields/pharos__FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>pharos__FilterLogic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>