main/default/objects/pharos__Rule__c/fields/pharos__Index__c.field-meta.xml
<CustomField>
    <fullName>pharos__Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>