main/default/objects/pharos__Rule__c/fields/pharos__Is_Not_Valid__c.field-meta.xml
<CustomField>
    <fullName>pharos__Is_Not_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Valid</label>
    <type>Checkbox</type>
</CustomField>