main/default/objects/pharos__Rule__c/fields/pharos__Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>