main/default/objects/pharos__Rule__c/fields/pharos__Related_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Related_Id__c</fullName>
    <label>Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>