main/default/objects/pharos__Rule__c/fields/pharos__Subtype__c.field-meta.xml
<CustomField>
    <fullName>pharos__Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pharos__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Spike</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Frequency</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>