main/default/objects/pharos__Rule__c/fields/pharos__Threshold__c.field-meta.xml
<CustomField>
    <fullName>pharos__Threshold__c</fullName>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>