main/default/objects/pharos__Rule__c/fields/pharos__Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Archival</fullName>
            </value>
            <value>
                <fullName>JIRA Update</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>