main/default/objects/pharos__Rule__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <columns>NAME</columns>
    <columns>pharos__Active__c</columns>
    <columns>pharos__AggregateType__c</columns>
    <columns>pharos__Name__c</columns>
    <columns>pharos__EventTimeInterval__c</columns>
    <columns>pharos__FilterLogic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>